--- a/GestionGaleria/GestionGaleria.csproj
+++ b/GestionGaleria/GestionGaleria.csproj
@@ -55,17 +55,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presentation\FormGestPinturas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentation\FormGestPinturas.Designer.cs">
+      <DependentUpon>FormGestPinturas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ViewPintura.cs">
+      <DependentUpon>DB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Presentation\ExplorarPintores.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Presentation\ExplorarPintores.Designer.cs">
       <DependentUpon>ExplorarPintores.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentation\Form1.cs">
+    <Compile Include="Presentation\FormMenuAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentation\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Presentation\FormMenuAdmin.Designer.cs">
+      <DependentUpon>FormMenuAdmin.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\DB.Context.cs">
       <AutoGen>True</AutoGen>
@@ -121,16 +130,25 @@
     <Compile Include="Presentation\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentation\Nuevo.cs">
+    <Compile Include="Presentation\FormGestionarPersonas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentation\Nuevo.Designer.cs">
-      <DependentUpon>Nuevo.cs</DependentUpon>
+    <Compile Include="Presentation\FormGestionarPersonas.Designer.cs">
+      <DependentUpon>FormGestionarPersonas.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Presentation\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Presentation\FormGestPinturas.resx">
+      <DependentUpon>FormGestPinturas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentation\ExplorarPintores.resx">
+      <DependentUpon>ExplorarPintores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentation\FormMenuAdmin.resx">
+      <DependentUpon>FormMenuAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentation\FormExplorarPinturas.resx">
+      <DependentUpon>FormExplorarPinturas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentation\FormInicio.resx">
       <DependentUpon>FormInicio.cs</DependentUpon>
@@ -138,8 +156,8 @@
     <EmbeddedResource Include="Presentation\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentation\Nuevo.resx">
-      <DependentUpon>Nuevo.cs</DependentUpon>
+    <EmbeddedResource Include="Presentation\FormGestionarPersonas.resx">
+      <DependentUpon>FormGestionarPersonas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
